# user-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  puff.yml
migrations/2025_01_06_030332_create_users/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/controller/: friends.rs  invite.rs  mod.rs  privacy.rs  status.rs  user.rs
src/models/: friends.rs  mod.rs  privacy.rs  user.rs  userprofile.rs
src/repository/: friends.rs  privacy.rs  user.rs
src/service/: friend.rs  invite.rs  mod.rs  privacy.rs  status.rs  user.rs  userprofile.rs  wss.rs
