[package]
name = "user-service"
version = "0.1.4"
edition = "2021"

[dependencies]
adjust = "0.1.26"
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
log = "0.4.22"
once_cell = "1.21.1"
paste = "1.0.15"
reqwest = "0.12.15"
serde_json = "1.0.140"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "r2d2", "chrono", "serde_json"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
